@@ -1,10 +1,12 @@
 #!/usr/bin/env python
-# vim:sw=4
+# vim:sw=4:et
 """
 """
 
 import sys
 import types
+import os
+import pprint
 
 _no_default = object()
 
@@ -16,16 +18,25 @@ class Resource(object):
     def __init__(self, initial_resources={}):
         self._resources.update(initial_resources)
         self._persistent = []
+        self._backend = FileBackend()
+        self._backend.load(self)
 
     def __call__(self, r, default=_no_default):
         return self.resource(r, default)
 
-    def dump(self, to=sys.stdout):
+    def save(self):
+        self._backend.save(self, self._persistent)
+
+    def _items(self):
+        return self._resources.iteritems()
+
+    def dump(self, stream=sys.stdout):
         """TODO: define resources that are persistent (have to be saved
         and loaded.
         """
-        for name in self._persistent:
-            print >> to, '%s: %s' % (name, self._resources.get(name))
+        persist = dict([(k, v) for k, v in self._resources.iteritems() if k in self._persistent])
+        import pprint
+        pprint.pprint(persist, stream)
 
     def resource(self, r, default=_no_default, persistent=False):
         """Locate a resource.
@@ -73,14 +84,70 @@ class Resource(object):
         """
         self._resources[r] = value
         if persistent or r in self._persistent:
-            self.persist(r)
+            self.persist(r, value)
 
-    def persist(self, r):
+    def persist(self, r, value):
         """Save the property to a persistent storage.
         """
         if r not in self._persistent:
             self._persistent.append(r)
+        self._backend.update(r, value)
 
-        # If GConf: add
-        # If win32: add to registry
-        # Else: create ~/.gaphor/resources
+
+class FileBackend(object):
+    """Resource backend that stores data to a resource file.
+    """
+    RESOURCE_FILE='resources'
+   
+    def __init__(self):
+        pass
+
+    def get_filename(self, datadir):
+        if not os.path.exists(datadir):
+            os.mkdir(datadir)
+        return os.path.join(datadir, self.RESOURCE_FILE)
+
+    def load(self, resource):
+        filename = self.get_filename(resource('UserDataDir'))
+        if os.path.exists(filename) and os.path.isfile(filename):
+            f = open(filename)
+            d = f.read()
+            f.close()
+            for k, v in eval(d).iteritems():
+                resource.set(k, v, persistent=True)
+
+    def save(self, resource, persistent):
+        """Save persist resources from the resources dictionary.
+        @resource is the Resource instance
+        @persistent is a list of persistent resource names.
+        """
+        filename = self.get_filename(resource('UserDataDir'))
+        f = open(filename, 'w')
+        persist = dict([(k, v) for k, v in resource._items() if k in persistent])
+        pprint.pprint(persist, f)
+
+    def update(self, r, value):
+        pass
+
+
+try:
+    import gconf
+except ImportError, e:
+    pass
+else:
+    class GConfBackend(object):
+        DOMAIN = '/apps/gaphor/'
+
+        def __init__(self):
+            self._gconf_client = gconf.client_get_default ()
+
+        def load(self, resources):
+            pass
+
+        def save(self, resources, persistent):
+            pass
+
+        def update(self, r, value):
+            pass
+
+
